// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlexRow should be rendered correctly 1`] = `
<DocumentFragment>
  <div
    class="root uui-flex-row uui-size-36"
  />
</DocumentFragment>
`;

exports[`FlexRow should be rendered correctly with props 1`] = `
<DocumentFragment>
  <div
    class="root uui-flex-row -clickable some class uui-size-24 alignItems justifyContent padding vPadding margin topShadow borderBottom borderTop columnGap rowGap uui-flex-row-bg-surface-main"
    id="123"
    style="--uui-flex-row-align-items: flex-start; --uui-flex-row-justify-content: center; --uui-flex-row-column-gap: 24px; --uui-flex-row-row-gap: 24px; --uui-flex-row-padding: 12px; --uui-flex-row-v-padding: 12px; --uui-flex-row-margin: 12px;"
  />
</DocumentFragment>
`;
